[package]
name = "freetsa"
version = "0.1.0"

authors = ["Sean Bruton <sean@unnecessary.llc>"]
categories = ["api-bindings", "authentication", "command-line-utilities", "cryptography"]
description = "Client library and CLI utility for acquiring timestamps from freetsa.org"
documentation = "https://docs.rs/freetsa/"
edition = "2021"
keywords = ["freetsa", "timestamp"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbruton/freetsa"
rust-version = "1.60"

[[bin]]
name = "freetsa"
path = "src/main.rs"
required-features = ["bin"]

[[example]]
name = "file"
path = "examples/file.rs"
requried-features = ["file-example"]

[[example]]
name = "hash"
path = "examples/hash.rs"
required-features = ["hash-example"]

[dependencies]
clap = {version = "4.0.12", features = ["derive"], optional = true}
hex-literal = {version = "0.3.4", optional = true}
reqwest = "0.11.12"
sha2 = {version = "0.10.6", optional = true}
simple_asn1 = "0.6.2"
thiserror = "1.0.37"
tokio = {version = "1.21.2", optional = true}

[features]
bin = ["clap", "file", "tokio", "tokio/macros", "tokio/rt-multi-thread"]
default = []
file = ["sha2", "tokio", "tokio/fs"]
file-example = ["file", "tokio", "tokio/macros", "tokio/rt-multi-thread"]
hash-example = ["hex-literal", "tokio", "tokio/macros", "tokio/rt-multi-thread"]
