[package]
name = "freetsa"
version = "0.1.2"

authors = ["Sean Bruton <sean@unnecessary.llc>"]
categories = ["api-bindings", "authentication", "command-line-utilities", "cryptography"]
description = "Client library and CLI utility for acquiring timestamps from freetsa.org"
documentation = "https://docs.rs/freetsa/"
edition = "2021"
keywords = ["freetsa", "timestamp"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbruton/freetsa"
rust-version = "1.60"

[[bin]]
name = "freetsa"
path = "src/main.rs"
required-features = ["bin"]

[[example]]
name = "file"
required-features = ["file"]

[[example]]
name = "hash"

[dependencies]
clap = {version = "4.0.12", features = ["derive"], optional = true}
reqwest = {version = "0.11.12", default-features = false}
sha2 = {version = "0.10.6", optional = true}
simple_asn1 = "0.6.2"
thiserror = "1.0.37"
tokio = {version = "1.21.2", optional = true}

[dev-dependencies]
futures-util = "0.3.24"
hex-literal = "0.3.4"
tokio = {version = "1.21.2", features = ["fs", "macros", "rt-multi-thread"]}

[features]
bin = ["clap", "file", "tokio", "tokio/macros", "tokio/rt-multi-thread"]
default = ["native-tls"]
file = ["sha2", "tokio", "tokio/fs"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[package.metadata.docs.rs]
all-features = true
